<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditToDoFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvEditTodoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/label_title" />

            <EditText
                android:id="@+id/txtEditToDoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvEditTodoTitle"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvEditToDoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                app:layout_constraintEnd_toStartOf="@+id/txtEditToDoDescription"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtEditToDoDescription"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textMultiLine"
                android:singleLine="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvEditToDoDescription"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/chkEditClosed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_closed" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvEditToDoLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_location" />

            <EditText
                android:id="@+id/txtEditToDoLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <Button
                android:id="@+id/btnEditToDoLocationMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_detail" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvEditToDoAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_alarm" />

            <Spinner
                android:id="@+id/spnEditToDoAlarmTiming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/alarm_timing_names" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtEditToDoDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tvEditToDoMeters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_meters" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/chkEditToDoVibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_vibration" />

            <Spinner
                android:id="@+id/spnEditToDoVibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/chkEditToDoSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sound" />

            <Spinner
                android:id="@+id/spnEditToDoSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/chkEditToDoLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_light" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spnEditToDoOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/edit_todo_options" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ok"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cancel"
                    app:layout_constraintEnd_toEndOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </TableRow>
    </TableLayout>

</FrameLayout>